--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,42 @@
-name: Build, Test and Deploy
+name: Build and Test
 
 on:
   push:
-    branches:
-      - main
-      - beta
-  pull_request:
+    branches: ["main", "beta"]
+  workflow_call:
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASSWORD:
+        required: true
+      CC_TEST_REPORTER_ID:
+        required: true
+
+env:
+  CHECKOUT_REFERENCE: ${{ github.event.pull_request.head.sha || github.sha }}
 
 jobs:
   lint:
-    name: Linting
+    name: Lint
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Cancel previous running workflows
-        uses: fkirc/skip-duplicate-actions@master
-      - uses: actions/checkout@v2
+        uses: fkirc/skip-duplicate-actions@f75dd6564bb646f95277dc8c3b80612e46a4a1ea
+      - uses: actions/checkout@v2.x
         with:
+          ref: ${{ env.CHECKOUT_REFERENCE }}
           fetch-depth: 0
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2.x
         with:
-            node-version: 14.17.6
-      - uses: actions/cache@v2
+          node-version: 14.17.6
+      - uses: actions/cache@v2.x
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
       - name: install dependencies
         run: yarn install --frozen-lockfile --non-interactive --production=false
       - name: Lint commit message
-        uses: wagoid/commitlint-github-action@v2
+        uses: wagoid/commitlint-github-action@2d572ed5ea8b369af534fa21eea186a7eef07cda
       - name: lint Javascript
         run: yarn lint
 
@@ -36,20 +44,21 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     needs: [lint]
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     strategy:
       matrix:
-        node: ['10', '14']
+        node: [10, 14]
         include:
-          - node: '14'
+          - node: 14
             withCoverage: ${{ true }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v2.x
+        with:
+          ref: ${{ env.CHECKOUT_REFERENCE }}
+      - uses: actions/setup-node@v2.x
         with:
           node-version: ${{ matrix.node }}
       - name: Cache node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v2.x
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
@@ -58,11 +67,11 @@ jobs:
       - name: Start docker container
         run: docker-compose up -d; sleep 15
       - name: Test with Node ${{ matrix.node }}
-        if: '!matrix.withCoverage'
+        if: ${{ !matrix.withCoverage }}
         run: yarn test
       - name: Test with Node ${{ matrix.node }} & Send coverage
-        uses: paambaati/codeclimate-action@v2.7.4
-        if: matrix.withCoverage && matrix.node == '14'
+        uses: paambaati/codeclimate-action@84cea27117a473d605400ca3a97fcef7e433e2d6
+        if: matrix.withCoverage && matrix.node == 14
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
@@ -78,21 +87,27 @@ jobs:
     needs: [test]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.x
         with:
+          ref: ${{ github.ref }}
           persist-credentials: false # GITHUB_TOKEN must not be set for the semantic release
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2.x
         with:
-          node-version: 12.13.0
-      - uses: actions/cache@v2
+          node-version: 14.17.6
+      - uses: actions/cache@v2.x
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Get Semantic Release current version
+        id: semantic_version
+        run: |
+          VERSION=`node -p "require('./package.json').devDependencies['semantic-release']"`
+          echo "::set-output name=version::$VERSION"
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
+        uses: cycjimmy/semantic-release-action@767cc0b0cd610ffb1ffee1b36a9b39120adc5f80
         id: semantic
         with:
-          semantic_version: 17.3.0
+          semantic_version: ${{ steps.semantic_version.outputs.version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
