--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,22 +21,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Cancel previous running workflows
-        uses: fkirc/skip-duplicate-actions@f75dd6564bb646f95277dc8c3b80612e46a4a1ea
-      - uses: actions/checkout@v2.x
+        uses: fkirc/skip-duplicate-actions@9da67cec51d21092667038f0f4fda73099a3a451
+      - uses: actions/checkout@v2
         with:
           ref: ${{ env.CHECKOUT_REFERENCE }}
           fetch-depth: 0
-      - uses: actions/setup-node@v2.x
+      - uses: actions/setup-node@v2
         with:
           node-version: 14.17.6
-      - uses: actions/cache@v2.x
+      - uses: actions/cache@v2
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
       - name: install dependencies
         run: yarn install --frozen-lockfile --non-interactive --production=false
       - name: Lint commit message
-        uses: wagoid/commitlint-github-action@2d572ed5ea8b369af534fa21eea186a7eef07cda
+        uses: wagoid/commitlint-github-action@296247dfa6a133767fe0d64d08fb66326047b680
       - name: lint Javascript
         run: yarn lint
 
@@ -51,14 +51,14 @@ jobs:
           - node: 14
             withCoverage: ${{ true }}
     steps:
-      - uses: actions/checkout@v2.x
+      - uses: actions/checkout@v2
         with:
           ref: ${{ env.CHECKOUT_REFERENCE }}
-      - uses: actions/setup-node@v2.x
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
       - name: Cache node_modules
-        uses: actions/cache@v2.x
+        uses: actions/cache@v2
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
@@ -70,7 +70,7 @@ jobs:
         if: ${{ !matrix.withCoverage }}
         run: yarn test
       - name: Test with Node ${{ matrix.node }} & Send coverage
-        uses: paambaati/codeclimate-action@84cea27117a473d605400ca3a97fcef7e433e2d6
+        uses: paambaati/codeclimate-action@a7e64543c78101eac7d82a04686e329a589274cc
         if: matrix.withCoverage && matrix.node == 14
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
@@ -87,14 +87,14 @@ jobs:
     needs: [test]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
     steps:
-      - uses: actions/checkout@v2.x
+      - uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
           persist-credentials: false # GITHUB_TOKEN must not be set for the semantic release
-      - uses: actions/setup-node@v2.x
+      - uses: actions/setup-node@v2
         with:
           node-version: 14.17.6
-      - uses: actions/cache@v2.x
+      - uses: actions/cache@v2
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
