--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -12,7 +12,7 @@ jobs:
     continue-on-error: false
     outputs:
       developers: |
-        ${{ (github.actor != 'dependabot[bot]' && fromJSON(steps.get_devs.outputs.data).*.login) || 
+        ${{ (github.actor != 'dependabot[bot]' && join(fromJSON(steps.get_devs.outputs.data).*.login, ', ')) || 
         'dependabot[bot]' }}
     steps:
       - id: get_devs
