--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -40,3 +40,12 @@ jobs:
         run: |
           echo "Workflow needs to be ran manually by a repo maintainer"
           exit 1
+
+  build-workflow:
+    needs: [preflight]
+    if: needs.preflight.result != 'failure'
+    uses: ForestAdmin/toolbelt/.github/workflows/build.yml@chore/workflows
+    secrets:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
