--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,14 +70,13 @@ jobs:
         if: ${{ !matrix.withCoverage }}
         run: yarn test
       - name: Test with Node ${{ matrix.node }} & Send coverage
-        uses: paambaati/codeclimate-action@84cea27117a473d605400ca3a97fcef7e433e2d6
+        uses: ForestAdmin/codeclimate-action@master
         if: matrix.withCoverage && matrix.node == 14
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-          GIT_COMMIT_SHA: ${{ env.CHECKOUT_REFERENCE }}
-          GIT_BRANCH: ${{ github.head_ref || github.ref }}
         with:
           coverageCommand: yarn test:coverage
+          ref: ${{ env.CHECKOUT_REFERENCE }}
       - name: Test prepack
         run: yarn prepack
       - name: Test postpack
