--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
   get-team:
     runs-on: ubuntu-latest
     continue-on-error: false
+    timeout-minutes: 10
     outputs:
       developers: |
         ${{ (github.actor != 'dependabot[bot]' && join(fromJSON(steps.get_devs.outputs.data).*.login, ', ')) 
@@ -31,6 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [get-team]
     continue-on-error: false
+    timeout-minutes: 10
     steps:
       - if: ${{ !contains(needs.get-team.outputs.developers, github.actor) }}
         run: |
