--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,49 +1,107 @@
 name: CI
-
 on:
-  pull_request_target: # Unsecure event. Mind the workflow actor and the code to be ran
-
-# Force down scope of permissions
-permissions: read-all
+  pull_request:
+  push:
+    branches: ["main", "beta"]
 
 jobs:
-  get-team:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
-    continue-on-error: false
     timeout-minutes: 10
-    outputs:
-      developers: |
-        ${{ (github.actor != 'dependabot[bot]' && join(fromJSON(steps.get_devs.outputs.data).*.login, ', ')) 
-        || 'dependabot[bot]' }}
     steps:
-      - id: get_devs
-        if: github.actor != 'dependabot[bot]'
-        uses: octokit/request-action@7e93b91076fad3920c29d44eb2a6311d929db3dd
+      - name: Cancel previous running workflows
+        uses: fkirc/skip-duplicate-actions@9da67cec51d21092667038f0f4fda73099a3a451
+      - uses: actions/checkout@v2
         with:
-          route: GET /orgs/{org}/teams/{team_slug}/members
-          org: ForestAdmin
-          team_slug: Developers
-          role: all
-          per_page: 50
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14.17.6
+      - uses: actions/cache@v2
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+      - name: install dependencies
+        run: yarn install --frozen-lockfile --non-interactive --production=false
+      - name: Lint commit message
+        uses: wagoid/commitlint-github-action@296247dfa6a133767fe0d64d08fb66326047b680
+      - name: lint Javascript
+        run: yarn lint
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: [lint]
+    strategy:
+      matrix:
+        node: [10, 14]
+        include:
+          - node: 14
+            withCoverage: ${{ true }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Login on dockerhub
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Start docker container
+        run: docker-compose up -d; sleep 15
+      - name: Test with Node ${{ matrix.node }}
+        if: ${{ !matrix.withCoverage }}
+        run: yarn test
+      - name: Test with Node ${{ matrix.node }} & Send coverage
+        uses: ForestAdmin/codeclimate-action@master
+        if: matrix.withCoverage && matrix.node == 14
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: yarn test:coverage
+      - name: Test prepack
+        run: yarn prepack
+      - name: Test postpack
+        run: yarn postpack
+
+  deploy:
+    name: Release package
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: [test]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+          persist-credentials: false # GITHUB_TOKEN must not be set for the semantic release
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14.17.6
+      - uses: actions/cache@v2
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Get Semantic Release current version
+        id: semantic_version
+        run: |
+          VERSION=`node -p "require('./package.json').devDependencies['semantic-release']"`
+          echo "::set-output name=version::$VERSION"
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@767cc0b0cd610ffb1ffee1b36a9b39120adc5f80
+        id: semantic
+        with:
+          semantic_version: ${{ steps.semantic_version.outputs.version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-
-  preflight:
-    runs-on: ubuntu-latest
-    needs: [get-team]
-    continue-on-error: false
-    timeout-minutes: 10
-    steps:
-      - if: ${{ !contains(needs.get-team.outputs.developers, github.actor) }}
-        run: |
-          echo "Workflow needs to be ran manually by a repo maintainer"
-          exit 1
-
-  build-workflow:
-    needs: [preflight]
-    if: needs.preflight.result != 'failure'
-    uses: ForestAdmin/toolbelt/.github/workflows/build.yml@main
-    secrets:
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          GIT_AUTHOR_EMAIL: ${{ secrets.GIT_AUTHOR_EMAIL }}
+          GIT_AUTHOR_NAME: ${{ secrets.GIT_AUTHOR_NAME }}
+          GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL }}
+          GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
