--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,17 @@ services:
     ports:
       - "127.0.0.1:8999:3306"
 
+  maria_db:
+    image: mariadb:10
+    container_name: forestadmin_test_toolbelt_mariadb
+    environment:
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_DATABASE: forestadmin_test_toolbelt-sequelize
+      MYSQL_USER: forest
+      MYSQL_PASSWORD: secret
+    ports:
+      - "127.0.0.1:9000:3306"
+
   MS-SQL-MIN:
     image: mcr.microsoft.com/mssql/server:2017-latest
     container_name: forestadmin_test_toolbelt_mssql_min
