--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "handlebars": "4.7.7",
     "inquirer": "6.2.0",
     "joi": "14.3.1",
+    "json-diff": "1.0.0",
     "jsonapi-serializer": "3.6.2",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "2.2.0",
