--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/git": "10.0.1",
     "@types/jest": "27.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
@@ -77,7 +79,9 @@
     "nock": "13.0.4",
     "rimraf": "3.0.2",
     "semantic-release": "19.0.3",
-    "semantic-release-slack-bot": "3.5.2"
+    "semantic-release-slack-bot": "3.5.2",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -86,16 +90,16 @@
     "/bin",
     "/npm-shrinkwrap.json",
     "/oclif.manifest.json",
-    "/src"
+    "/dist"
   ],
   "homepage": "https://github.com/ForestAdmin/toolbelt",
   "keywords": [
     "forestadmin"
   ],
   "license": "GPL-3.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "oclif": {
-    "commands": "./src/commands",
+    "commands": "./dist/commands",
     "bin": "forest",
     "plugins": [
       "@oclif/plugin-help",
@@ -114,6 +118,8 @@
     "prepare": "husky install",
     "prepack": "oclif-dev manifest",
     "postpack": "rm -f oclif.manifest.json",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "test": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage"
   }
