--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@types/jest": "27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "6.8.0",
+    "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-oclif": "3.1.0",
     "eslint-plugin-import": "2.25.2",
@@ -114,7 +114,7 @@
   },
   "repository": "ForestAdmin/toolbelt",
   "scripts": {
-    "lint": "./node_modules/eslint/bin/eslint.js ./*.js src test",
+    "lint": "eslint src test",
     "prepare": "husky install",
     "prepack": "oclif-dev manifest",
     "postpack": "rm -f oclif.manifest.json",
