--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: [test]
     steps:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@master
