chore(typescript): speed up tests and copy templates on build watch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,9 @@
     "stripInternal": true
   },
   "include": ["./src/"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+
+  "ts-node": {
+    "swc": true // For ultra fast compilation in dev mode
+  }
 }
