--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@oclif/dev-cli": "1.22.2",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/git": "10.0.1",
+    "@swc/core": "1.3.34",
+    "@swc/jest": "0.2.24",
     "@types/jest": "27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -80,7 +82,7 @@
     "rimraf": "3.0.2",
     "semantic-release": "19.0.3",
     "semantic-release-slack-bot": "3.5.2",
-    "ts-jest": "^27.1.2",
+    "tsc-watch": "6.0.0",
     "typescript": "^4.5.4"
   },
   "engines": {
@@ -119,7 +121,7 @@
     "prepack": "oclif-dev manifest",
     "postpack": "rm -f oclif.manifest.json",
     "build": "tsc",
-    "build:watch": "tsc --watch",
+    "build:watch": "tsc-watch --onSuccess 'yarn postbuild'",
     "test": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage",
     "postbuild": "cp -R src/services/dumper/templates dist/services/dumper/templates"
