--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,12 +91,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build
-          path: |
-            ./dist/*
-            ./package.json
-            ./bin
-            ./npm-shrinkwrap.json
-            ./oclif.manifest.json
+          path: ./dist/*
           retention-days: 1
 
   deploy:
@@ -106,6 +101,10 @@ jobs:
     needs: [build, test]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
     steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+          persist-credentials: false # GITHUB_TOKEN must not be set for the semantic release
       - uses: actions/setup-node@v2
         with:
           node-version: 14.17.6
