--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,20 +79,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16.14.0
+          node-version: 16.17.6
       - uses: actions/cache@v3
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock', '**/package.json') }}
       - name: Build
         run: yarn build
-      - name: Upload build
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: ./dist/*
-          retention-days: 1
 
   deploy:
     name: Release package
@@ -112,10 +105,8 @@ jobs:
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
-      - name: Download build
-        uses: actions/download-artifact@v3
-        with:
-          name: build
+      - name: Build
+        run: yarn build
       - name: Get Semantic Release current version
         id: semantic_version
         run: |
