--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "bugs": "https://github.com/ForestAdmin/toolbelt/issues",
   "dependencies": {
-    "@forestadmin/context": "1.31.0",
+    "@forestadmin/context": "1.34.1",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
     "@oclif/errors": "1.2.2",
@@ -128,6 +128,6 @@
     "build:watch": "tsc-watch --onSuccess 'yarn postbuild'",
     "test": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage",
-    "postbuild": "cp -R src/services/dumper/templates dist/services/dumper/templates"
+    "postbuild": "cp -R src/services/dumper/templates dist/services/dumper/"
   }
 }
