--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,22 +12,52 @@ jobs:
     steps:
       - name: Cancel previous running workflows
         uses: fkirc/skip-duplicate-actions@9da67cec51d21092667038f0f4fda73099a3a451
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: 14.17.6
-      - uses: actions/cache@v2
+          cache: 'yarn'
+
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        id: cache-primes
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
-      - name: install dependencies
+
+      - name: Install dependencies
+        if: steps.cache-primes.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile --non-interactive --production=false
+
       - name: Lint commit message
         uses: wagoid/commitlint-github-action@296247dfa6a133767fe0d64d08fb66326047b680
-      - name: lint Javascript
+
+      - name: Lint javascript and typescript
         run: yarn lint
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [lint]
+    steps:
+      - name: Cancel previous running workflows
+        uses: fkirc/skip-duplicate-actions@master
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14.17.6
+          cache: 'yarn'
+
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Build
+        run: yarn build
 
   test:
     name: Test
@@ -41,22 +71,28 @@ jobs:
           - node: 14
             withCoverage: ${{ true }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          cache: 'yarn'
+
       - name: Cache node_modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Login on dockerhub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
       - name: Start docker container
         run: docker-compose up -d; sleep 15
+
       - name: Test with Node ${{ matrix.node }}
         if: ${{ !matrix.withCoverage }}
         run: yarn test
+
       - name: Test with Node ${{ matrix.node }} & Send coverage
         uses: paambaati/codeclimate-action@84cea27117a473d605400ca3a97fcef7e433e2d6
         if: matrix.withCoverage && matrix.node == 14
@@ -64,28 +100,12 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: yarn test:coverage
+
       - name: Test prepack
         run: yarn prepack
+
       - name: Test postpack
         run: yarn postpack
-
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    needs: [lint]
-    steps:
-      - name: Cancel previous running workflows
-        uses: fkirc/skip-duplicate-actions@master
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14.17.6
-      - uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
-      - name: Build
-        run: yarn build
 
   deploy:
     name: Release package
@@ -94,24 +114,29 @@ jobs:
     needs: [build, test]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/beta')
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
           persist-credentials: false # GITHUB_TOKEN must not be set for the semantic release
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: 14.17.6
-      - uses: actions/cache@v2
+          cache: 'yarn'
+
+      - uses: actions/cache@v3
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Build
         run: yarn build
+
       - name: Get Semantic Release current version
         id: semantic_version
         run: |
           VERSION=`node -p "require('./package.json').devDependencies['semantic-release']"`
           echo "::set-output name=version::$VERSION"
+
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@767cc0b0cd610ffb1ffee1b36a9b39120adc5f80
         id: semantic
