feat: add mariadb, improve tests

--- a/test/services/dumpers/agent-nodejs/expected/mariadb/docker-compose.yml
+++ b/test/services/dumpers/agent-nodejs/expected/mariadb/docker-compose.yml
@@ -4,29 +4,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-{{#if network}}
-      network: {{network}}
-{{/if}}
-    container_name: {{ containerName }}
+      network: host
+    container_name: test_output_mariadb
     environment:
       - FOREST_ENV_SECRET=${FOREST_ENV_SECRET}
       - FOREST_AUTH_SECRET=${FOREST_AUTH_SECRET}
-{{#if forestServerUrl }}
-      - FOREST_SERVER_URL={{ forestServerUrl }}
-      - NODE_TLS_REJECT_UNAUTHORIZED=0
-{{/if}}
       - APPLICATION_PORT=${APPLICATION_PORT}
-      - DATABASE_URL={{ databaseUrl }}
+      - DATABASE_URL=${DATABASE_URL}
       - DATABASE_SSL=${DATABASE_SSL}
       - DATABASE_REJECT_UNAUTHORIZED=${DATABASE_REJECT_UNAUTHORIZED}
-{{#if dbSchema }}
       - DATABASE_SCHEMA=${DATABASE_SCHEMA}
-{{/if}}
       - NODE_ENV=${NODE_ENV}
-{{#if forestExtraHost}}
-    extra_hosts:
-      - {{forestExtraHost}}:host-gateway
-{{/if}}
     ports:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     volumes:
