--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@swc/core": "1.3.34",
     "@swc/jest": "0.2.24",
     "@types/jest": "27.0.2",
+    "@types/lodash": "4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
@@ -128,6 +129,6 @@
     "build:watch": "tsc-watch --onSuccess 'yarn postbuild'",
     "test": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage",
-    "postbuild": "cp -R src/services/dumpers/templates dist/services/dumpers/templates"
+    "postbuild": "mkdir -p ./dist/services/dumpers/templates && cp -R src/services/dumpers/templates dist/services/dumpers/templates"
   }
 }
