--- a/test/services/dumpers/agent-nodejs/expected/mssql/docker-compose.yml
+++ b/test/services/dumpers/agent-nodejs/expected/mssql/docker-compose.yml
@@ -3,20 +3,11 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
       network: host
     container_name: test_output_mssql
-    environment:
-      - FOREST_ENV_SECRET=${FOREST_ENV_SECRET}
-      - FOREST_AUTH_SECRET=${FOREST_AUTH_SECRET}
-      - APPLICATION_PORT=${APPLICATION_PORT}
-      - DATABASE_URL=${DATABASE_URL}
-      - DATABASE_SSL=${DATABASE_SSL}
-      - DATABASE_REJECT_UNAUTHORIZED=${DATABASE_REJECT_UNAUTHORIZED}
-      - DATABASE_SCHEMA=${DATABASE_SCHEMA}
-      - NODE_ENV=${NODE_ENV}
+    env_file:
+      - .env
     ports:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     volumes:
       - ./:/usr/src/app
-      - /usr/src/app/node_modules
