--- a/test/services/dumpers/agent-nodejs/expected/mysql/docker-compose.yml
+++ b/test/services/dumpers/agent-nodejs/expected/mysql/docker-compose.yml
@@ -11,3 +11,4 @@ services:
       - "${APPLICATION_PORT}:${APPLICATION_PORT}"
     volumes:
       - ./:/usr/src/app
+      - /usr/src/app/node_modules
