refactor(javascript): separate javascript code to prepare for typescript

--- a/test/services/dumpers/agent-nodejs/expected/javascript/mariadb/docker-compose.yml
+++ b/test/services/dumpers/agent-nodejs/expected/javascript/mariadb/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       network: host
-    container_name: test_output_mariadb
+    container_name: test_output_javascript_mariadb
     env_file:
       - .env
     ports:
