--- a/test/services/dumpers/agent-nodejs/expected/javascript/mongodb/docker-compose.yml
+++ b/test/services/dumpers/agent-nodejs/expected/javascript/mongodb/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       network: host
-    container_name: test_output_postgres
+    container_name: test_output_javascript_mongodb
     env_file:
       - .env
     ports:
