--- a/test/services/dumpers/agent-nodejs/expected/javascript/mssql/docker-compose.yml
+++ b/test/services/dumpers/agent-nodejs/expected/javascript/mssql/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       network: host
-    container_name: test_output_mongodb
+    container_name: test_output_javascript_mssql
     env_file:
       - .env
     ports:
