--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "target": "es2019",
+    "target": "ES2020",
     "allowJs": true,
     "outDir": "./dist/",
     "skipLibCheck": true,
