--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
     needs: [lint]
     strategy:
       matrix:
-        node: [14, 16, 18]
+        node: [14, 16, 18, 20]
         include:
           - node: 14
             withCoverage: ${{ true }}
