--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@forestadmin/context": "1.37.1",
     "@oclif/command": "1.5.4",
     "@oclif/config": "1.8.8",
+    "@oclif/core": "2.8.5",
     "@oclif/errors": "1.2.2",
     "@oclif/plugin-help": "2.1.3",
     "@oclif/plugin-not-found": "1.2.4",
@@ -117,6 +118,11 @@
       "timeoutInDays": 7,
       "message": "<%= config.name %> update available from <%= chalk.greenBright(config.version) %> to <%= chalk.greenBright(latest) %>.",
       "registry": "https://www.npmjs.com/package/forest-cli"
+    },
+    "hooks": {
+      "init": [
+        "./dist/hooks/init/check-compatible-node-version"
+      ]
     }
   },
   "repository": "ForestAdmin/toolbelt",
