--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,7 +138,7 @@ jobs:
           echo "::set-output name=version::$VERSION"
 
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@767cc0b0cd610ffb1ffee1b36a9b39120adc5f80
+        uses: cycjimmy/semantic-release-action@v2
         id: semantic
         with:
           semantic_version: ${{ steps.semantic_version.outputs.version }}
