--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
   MySQL-MIN:
     image: mysql:5.6
     container_name: forestadmin_test_toolbelt_mysql_min
+    platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: forestadmin_test_toolbelt-sequelize
