fix(onboarding): prevent install of deprecated @paralleldrive/cuid2@2.3.0 version

--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "@azure/core-util": "1.11.0",
     "@azure/identity": "4.2.1",
     "@azure/keyvault-keys": "4.4.0",
-    "@azure/logger": "1.0.4"
+    "@azure/logger": "1.0.4",
+    "@paralleldrive/cuid2": "2.2.2"
   }
 }
