fix(onboarding): prevent install of deprecated @paralleldrive/cuid2@2.3.0 version

--- a/package.json
+++ b/package.json
@@ -146,5 +146,8 @@
     "@azure/keyvault-keys": "4.4.0",
     "@azure/logger": "1.0.4",
     "@paralleldrive/cuid2": "2.2.2"
+  },
+  "overrides": {
+    "@paralleldrive/cuid2": "2.2.2"
   }
 }
