fix: upgrade manually npm

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,6 +115,8 @@ jobs:
         with:
           node-version: 22.21.0
           cache: 'yarn'
+      - name: Install npm >= 11.15.0
+        run: npm install -g npm@latest
       - uses: actions/cache@v4
         with:
           path: "**/node_modules"
